--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                 <nav class="main-nav">
                     <ul>
                         <li><a href="index.html" class="nav-link active">Home</a></li>
-                        <li><a href="About.html" class="nav-link">About</a></li>
-                        <li><a href="Product.html" class="nav-link">Products</a></li>
-                        <li><a href="Contact.html" class="nav-link">Contact</a></li>
+                        <li><a href="about.html" class="nav-link">About</a></li>
+                        <li><a href="product.html" class="nav-link">Products</a></li>
+                        <li><a href="contact.html" class="nav-link">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -113,3 +113,4 @@
 </body>
 
 </html>
+
